tests/specs/check/tsconfig_root_dirs/main.out
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const foo: Foo = 1;
      ~~~
    at [WILDLINE]/main.ts:3:7

error: Type checking failed.
