tests/specs/check/tsconfig_root_dirs/main.ts
import type { Foo } from "./foo.d.ts";

const foo: Foo = 1;
console.log(foo);
